Minor css change, bug-fix for body overflowing in some cases

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -32,7 +32,7 @@ body {
 	font-family: 'Open Sans', sans-serif;
 	color: $color-grey-6;
 	font-size: 16px;
-	overflow-x: hidden;
+	overflow: hidden;
 }
 h1, h2, h3, h4, h5, h6 {
 	font-family: 'Proza Libre', sans-serif;
